# py5-layout

./: .gitignore  README.md  node_tree  pyproject.toml  scratchpad.py  scratchpad2.py  scratchpad3.py  script.py  script2.py  sketchpad4.py  sketchpad5.py  sketchpad6.py  sketchpad7.py
examples/: custom_sketch.py
src/py5_layout/: __init__.py  components.py  div.py  element.py  layout_manager.py  parent_manager.py  py5_layout.py  style.py
src/py5_markup/: block.py  button.py  displays.py  element.py  flex_box.py  flex_container.py  layout_manager.py  layout_managers.py  parent_manager.py  style.py
tests/: run.py  run2.py  test_context_manager.py  test_style.py  test_text.py
