[project]
name = "py5-layout"
version = "0.1.0"
description = ""
authors = [
    {name = "Ty Todd",email = "swagginty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "py5 (>=0.10.6a0,<0.11.0)",
    "numpy>=1.26",
    "pytest (>=8.4.1,<9.0.0)",
    "poga (>=0.1.19,<0.2.0)"
]

[tool.poetry]
packages = [{include = "py5_layout", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
